# reelsaga

./: .gitignore  .vercelignore  LICENSE  README.md  package.json  pyproject.toml  vercel.json
api/hls/: manifest.js  segment.cjs  segment.js
data/: README.md  SCRAPE_REVIEW.md  api-coverage.json  scrape-manifest.json
data/api/: README.md  coverage.json
data/apk/: README.md
data/app/: README.md  android-manifest.xml  data-models-index.json  strings.xml
data/business/: README.md  engagement-metrics.json  pricing-summary.json  subscription-plans.json  transactions.json
data/company/: README.md  play-store.json  profile.json  website-scrape.json
data/content/: README.md  SUMMARY.json
data/home/: config.json
data/lists/: new.json
docs/: 00-INDEX.md  01_OVERVIEW.md  02_ARCHITECTURE.md  03_BUILD_SYSTEM.md  04_DEVELOPER_INFO.md  05_API_AND_NETWORK.md  06-SECURITY-ANALYSIS.md  07_PERMISSIONS_MANIFEST.md  08_DEPENDENCIES.md  ARTIFACT-MAP.md  DEV-FIX-GUIDE.md  HOW-WE-SCRAPED.md  SECURITY-REPORT.md
proofs/: README.md  facebook-graph-api-metadata.json  firebase-PROOF.md  firebase-installations-response.json
reports/: SECURITY_ASSESSMENT_REPORT.md
scraper/: README.md  __init__.py  business.py  cli.py  company.py  content.py  endpoints.py  secrets.py  users.py
scripts/: 01-extract-secrets-from-apk.sh  02-verify-firebase-key.sh  03-verify-facebook-token.sh  decode-apk.sh  rename-shows-by-title.py  scrape-all.sh
web/: README.md  index.html  package-lock.json  package.json  vercel.json  vite-plugin-api-proxy.ts  vite-plugin-hls-proxy.ts  vite.config.ts
(+368 files in other folders)
