[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reelsaga-scraper"
version = "1.0.0"
description = "ReelSaga security assessment — live data scraper"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary — ReelSaga Internal" }

[project.scripts]
reelsaga-scrape = "reelsaga_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["scraper"]
